# webgpuGlobe

./: .clangd  .gitignore  CMakeLists.txt  meson.build  meson_options.txt
src/: main.cc  mainStandalone.cc
src/app/: app.cc  app.h  shader.cc  shader.h  simpleApp.cc  wrappers.cc  wrappers.hpp
src/entity/: camera.cc  ellipsoid.cc  entity.h  renderable.h  simpleTri.cc  simpleTri2.cc  sky.cc
src/entity/globe/: bbox_entity.cc  bounding_box.h  cast.cc  dataloader.h  dataloader.hpp  globe.cc  globe.h  quadtree.h  tiff.cc  webgpu_utils.hpp
src/entity/globe/tiff/: dataloader.hpp  makeBbFile.cc  makeObbFile.cc  tiff.cc  tiff.h  tiff_dataloader.hpp
src/entity/globe/tiff/gpu/: resources.cc  resources.h  shader_cast.hpp
src/geo/: conversions.cc  conversions.h
src/util/: align3d.hpp  fmtEigen.h  gdalDataset.cc  gdalDataset.h  options.cc
subprojects/: imgui.wrap  implot.wrap  wgpu_native.wrap  wgpu_native_aarch64.wrap  wgpu_native_amd64.wrap
subprojects/packagefiles/imgui/: meson.build
subprojects/packagefiles/implot/: meson.build
subprojects/packagefiles/wgpuNative/: meson.build
subprojects/packagefiles/wgpuNativeAmd64/: meson.build
webgpuGlobe/: main.cc
webgpuGlobe/app/: app.cc  app.h  color_and_depth.cc  color_and_depth.h  simpleApp.cc  wrappers.cc  wrappers.hpp
webgpuGlobe/camera/: camera.cc  camera.h  globe_camera.cc  globe_camera.h  orthographic_camera.cc  orthographic_camera.h
webgpuGlobe/entity/: camera.cc  ellipsoid.cc  entity.h  renderable.cc  renderable.h  sky.cc  transformedSphere.cc
webgpuGlobe/entity/deferredCast/: deferredCast.cc  deferredCast.h  shader_noop.hpp
webgpuGlobe/entity/fog/: fog.cc  fog.h
webgpuGlobe/entity/globe/: bbox_entity.cc  bounding_box_map.hpp  cast.cc  cast.h  dataloader.hpp  fog.cc  fog.h  globe.cc  globe.h  quadtree.h  webgpu_utils.hpp
webgpuGlobe/entity/globe/gearth/: disabled.cc  gearth.cc  gearth.h  gearth_dataloader.hpp  makeBbFile.cc  octree.h
webgpuGlobe/entity/globe/gearth/decode/: rt_convert.hpp  rt_decode.h  rt_decode.hpp
webgpuGlobe/entity/globe/gearth/gpu/: resources.cc  resources.h  shader.hpp  shader_cast.hpp
webgpuGlobe/entity/globe/tiff/: makeBbFile.cc  tiff.cc  tiff.h  tiff_dataloader.hpp
webgpuGlobe/entity/globe/tiff/gpu/: resources.cc  resources.h  shader.hpp  shader_cast.hpp
webgpuGlobe/entity/primitive/: instanced.cc  instanced.h  instanced_shaders.hpp  primitive.cc  primitive.h  shaders.hpp  textured_primitive.cc  textured_primitive.h  textured_shaders.hpp
webgpuGlobe/entity/thickPrimitive/: entity.cc  line.cc  line.h  line_shaders.hpp  point.cc  point.h  point_shaders.hpp  shaders.hpp
webgpuGlobe/geo/: conversions.cc  earth.hpp
webgpuGlobe/glfw/: glfw3webgpu.cc
webgpuGlobe/util/: align3d.hpp  image.h  options.cc  options.h  testAlign.cc
